# triton-bot

./: .gitignore  CONTRIBUTING.md  README.md  config.yaml  install.sh  pyproject.toml
.github/workflows/: common_checks.yml
tests/: test_service.py  test_triton.py
triton/: chain.py  constants.py  service.py  triton.py
