[tool.poetry]
name = "triton"
version = "0.2.0"
description = ""
authors = ["David Vilela <dvilelaf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
python-telegram-bot = {extras = ["job-queue"], version = "^21.7"}
click = "^8.1.7"
olas-operate-middleware = "^0.11.4"
pytz = "^2025.2"
aiohttp = "3.9.5"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
darglint = "^1.8.1"
pylint = "^3.3.7"
mypy = "^1.17.0"
pytest = "^7.2.1"
types-pytz = "^2025.2.0.20250516"
types-requests = "^2.32.4.20250611"
types-pyyaml = "^6.0.12.20250516"

[[tool.mypy.overrides]]
module = ["operate.*"]
follow_untyped_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
